@@ -1,3 +1,8 @@
+Wed Jul 13 15:07:27 GMT 2011  Olly Betts <olly@survex.com>
+
+	* include/xapian/database.h: Improve the documentation comment for
+	  Database::close().  (ticket#504)
+
 Sat Jul 09 14:00:08 GMT 2011  Olly Betts <olly@survex.com>
 
 	* include/xapian/stem.h,languages/stem.cc: Stem::operator= now returns
